# 01_cli

./: .pre-commit-config.yaml  Cargo.toml  Readme.md  _typos.toml  deny.toml
.github/workflows/: rust.yml
assets/: MOCK_DATA.csv  out1.json  output.json  output.toml  output.yaml
fixtures/: ed25519.pk  ed25519.sk
src/: lib.rs  main.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  mod.rs  password.rs  text.rs
src/process/: b64.rs  csv_generate.rs  mod.rs  password_generate.rs  text.rs
