[package]
name = "first_cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
blake3 = "1.5.1"
clap = { version = "4.5.36", features = ["derive"] }
constant_time_eq = "0.4.2"
csv = "1.3.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
toml = "0.8.20"
zxcvbn = "3.1.0"
